parser/tests/snapshots/cfg_snapshots__single if__else statement, full single statement early return (dead code).snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n    if true {\n      return 1\n    } else {\n      return 2\n    }\n    let c = 1\n    let d = 1\n  \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(0)" ]
    3 [ label = "BasicBlock(1)" ]
    4 [ label = "BasicBlock(1)" ]
    5 [ label = "BasicBlock(2)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "ConditionTrue(2)" ]
    3 -> 1 [ label = "Return" ]
    2 -> 4 [ label = "ConditionFalse(2)" ]
    4 -> 1 [ label = "Return" ]
}

