parser/tests/snapshots/cfg_snapshots__single if__else statement, leading and trailing statements.snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n    let a = 1\n    let b = 1\n    if true {\n      let a = 1\n    } else {\n      let a = 1\n      let b = 1\n    }\n    let c = 1\n    let d = 1\n    \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(2)" ]
    3 [ label = "BasicBlock(1)" ]
    4 [ label = "BasicBlock(2)" ]
    5 [ label = "BasicBlock(2)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "ConditionTrue(2)" ]
    2 -> 4 [ label = "ConditionFalse(2)" ]
    3 -> 5 [ label = "Normal" ]
    4 -> 5 [ label = "Normal" ]
    5 -> 1 [ label = "Normal" ]
}

